HW2/y.output
Terminals unused in grammar

    FOR
    LOOP
    RETURN
    BREAK
    ARROW
    IN
    DOTDOT
    RSHIFT


State 60 conflicts: 1 shift/reduce
State 61 conflicts: 1 shift/reduce
State 66 conflicts: 2 shift/reduce
State 109 conflicts: 1 shift/reduce
State 110 conflicts: 1 shift/reduce
State 111 conflicts: 1 shift/reduce
State 112 conflicts: 1 shift/reduce
State 113 conflicts: 1 shift/reduce
State 114 conflicts: 1 shift/reduce
State 116 conflicts: 15 shift/reduce
State 117 conflicts: 1 shift/reduce
State 118 conflicts: 1 shift/reduce
State 119 conflicts: 1 shift/reduce
State 120 conflicts: 1 shift/reduce
State 121 conflicts: 1 shift/reduce
State 122 conflicts: 1 shift/reduce
State 123 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: GlobalStatementList

    2 GlobalStatementList: GlobalStatementList GlobalStatement
    3                    | GlobalStatement

    4 GlobalStatement: FunctionDeclStmt
    5                | NEWLINE

    6 $@1: ε

    7 FunctionDeclStmt: FUNC ID $@1 '(' ')' Block

    8 $@2: ε

    9 Block: '{' $@2 StatementList '}'

   10 StatementList: StatementList Statement
   11              | Statement

   12 $@3: ε

   13 Statement: PRINTLN Expr $@3 ';'

   14 $@4: ε

   15 Statement: PRINT Expr $@4 ';'
   16          | VariableDecl ';'
   17          | Assignment ';'
   18          | IF Expr Block
   19          | IF Expr Block ELSE Block
   20          | WHILE Expr Block
   21          | NEWLINE
   22          | Block

   23 VariableDecl: LET MUT ID ':' Type
   24             | LET ID ':' Type
   25             | LET MUT ID ':' Type '=' Expr
   26             | LET ID ':' Type '=' Expr
   27             | LET MUT ID '=' Expr
   28             | LET ID '=' Expr

   29 Assignment: ID '=' Expr
   30           | ID ADD_ASSIGN Expr
   31           | ID SUB_ASSIGN Expr
   32           | ID MUL_ASSIGN Expr
   33           | ID DIV_ASSIGN Expr
   34           | ID REM_ASSIGN Expr

   35 Expr: Literal
   36     | ID

   37 $@5: ε

   38 Expr: ID $@5 '[' Expr ']'
   39     | '-' Expr
   40     | '!' Expr
   41     | Expr '+' Expr
   42     | Expr '-' Expr
   43     | Expr '*' Expr
   44     | Expr '/' Expr
   45     | Expr '%' Expr
   46     | Expr '>' Expr
   47     | Expr '<' Expr
   48     | Expr GEQ Expr
   49     | Expr LEQ Expr
   50     | Expr EQL Expr
   51     | Expr NEQ Expr
   52     | Expr LOR Expr
   53     | Expr LAND Expr
   54     | Expr LSHIFT Expr
   55     | Expr AS Type
   56     | '"' Expr '"'
   57     | '(' Expr ')'
   58     | '[' ArrayLiteral ']'

   59 Literal: INT_LIT
   60        | FLOAT_LIT
   61        | STRING_LIT
   62        | '"' '"'
   63        | TRUE
   64        | FALSE

   65 ArrayLiteral: ArrayLiteral ',' Literal
   66             | Literal

   67 Type: INT
   68     | FLOAT
   69     | BOOL
   70     | STR
   71     | '&' Type
   72     | '[' Type ';' Literal ']'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 40
    '"' (34) 56 62
    '%' (37) 45
    '&' (38) 71
    '(' (40) 7 57
    ')' (41) 7 57
    '*' (42) 43
    '+' (43) 41
    ',' (44) 65
    '-' (45) 39 42
    '/' (47) 44
    ':' (58) 23 24 25 26
    ';' (59) 13 15 16 17 72
    '<' (60) 47
    '=' (61) 25 26 27 28 29
    '>' (62) 46
    '[' (91) 38 58 72
    ']' (93) 38 58 72
    '{' (123) 9
    '}' (125) 9
    error (256)
    LET (258) 23 24 25 26 27 28
    MUT (259) 23 25 27
    NEWLINE (260) 5 21
    INT (261) 67
    FLOAT (262) 68
    BOOL (263) 69
    STR (264) 70
    TRUE (265) 63
    FALSE (266) 64
    GEQ (267) 48
    LEQ (268) 49
    EQL (269) 50
    NEQ (270) 51
    LOR (271) 52
    LAND (272) 53
    ADD_ASSIGN (273) 30
    SUB_ASSIGN (274) 31
    MUL_ASSIGN (275) 32
    DIV_ASSIGN (276) 33
    REM_ASSIGN (277) 34
    IF (278) 18 19
    ELSE (279) 19
    FOR (280)
    WHILE (281) 20
    LOOP (282)
    PRINT (283) 15
    PRINTLN (284) 13
    FUNC (285) 7
    RETURN (286)
    BREAK (287)
    ARROW (288)
    AS (289) 55
    IN (290)
    DOTDOT (291)
    RSHIFT (292)
    LSHIFT (293) 54
    INT_LIT <i_val> (294) 59
    FLOAT_LIT <f_val> (295) 60
    STRING_LIT <s_val> (296) 61
    ID <s_val> (297) 7 23 24 25 26 27 28 29 30 31 32 33 34 36 38
    NEG (298)


Nonterminals, with rules where they appear

    $accept (64)
        on left: 0
    Program (65)
        on left: 1
        on right: 0
    GlobalStatementList (66)
        on left: 2 3
        on right: 1 2
    GlobalStatement (67)
        on left: 4 5
        on right: 2 3
    FunctionDeclStmt (68)
        on left: 7
        on right: 4
    $@1 (69)
        on left: 6
        on right: 7
    Block (70)
        on left: 9
        on right: 7 18 19 20 22
    $@2 (71)
        on left: 8
        on right: 9
    StatementList (72)
        on left: 10 11
        on right: 9 10
    Statement (73)
        on left: 13 15 16 17 18 19 20 21 22
        on right: 10 11
    $@3 (74)
        on left: 12
        on right: 13
    $@4 (75)
        on left: 14
        on right: 15
    VariableDecl (76)
        on left: 23 24 25 26 27 28
        on right: 16
    Assignment (77)
        on left: 29 30 31 32 33 34
        on right: 17
    Expr <s_val> (78)
        on left: 35 36 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58
        on right: 13 15 18 19 20 25 26 27 28 29 30 31 32 33 34 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
    $@5 (79)
        on left: 37
        on right: 38
    Literal <s_val> (80)
        on left: 59 60 61 62 63 64
        on right: 35 65 66 72
    ArrayLiteral (81)
        on left: 65 66
        on right: 58 65
    Type <s_val> (82)
        on left: 67 68 69 70 71 72
        on right: 23 24 25 26 55 71 72


State 0

    0 $accept: • Program $end

    NEWLINE  shift, and go to state 1
    FUNC     shift, and go to state 2

    Program              go to state 3
    GlobalStatementList  go to state 4
    GlobalStatement      go to state 5
    FunctionDeclStmt     go to state 6


State 1

    5 GlobalStatement: NEWLINE •

    $default  reduce using rule 5 (GlobalStatement)


State 2

    7 FunctionDeclStmt: FUNC • ID $@1 '(' ')' Block

    ID  shift, and go to state 7


State 3

    0 $accept: Program • $end

    $end  shift, and go to state 8


State 4

    1 Program: GlobalStatementList •
    2 GlobalStatementList: GlobalStatementList • GlobalStatement

    NEWLINE  shift, and go to state 1
    FUNC     shift, and go to state 2

    $default  reduce using rule 1 (Program)

    GlobalStatement   go to state 9
    FunctionDeclStmt  go to state 6


State 5

    3 GlobalStatementList: GlobalStatement •

    $default  reduce using rule 3 (GlobalStatementList)


State 6

    4 GlobalStatement: FunctionDeclStmt •

    $default  reduce using rule 4 (GlobalStatement)


State 7

    7 FunctionDeclStmt: FUNC ID • $@1 '(' ')' Block

    $default  reduce using rule 6 ($@1)

    $@1  go to state 10


State 8

    0 $accept: Program $end •

    $default  accept


State 9

    2 GlobalStatementList: GlobalStatementList GlobalStatement •

    $default  reduce using rule 2 (GlobalStatementList)


State 10

    7 FunctionDeclStmt: FUNC ID $@1 • '(' ')' Block

    '('  shift, and go to state 11


State 11

    7 FunctionDeclStmt: FUNC ID $@1 '(' • ')' Block

    ')'  shift, and go to state 12


State 12

    7 FunctionDeclStmt: FUNC ID $@1 '(' ')' • Block

    '{'  shift, and go to state 13

    Block  go to state 14


State 13

    9 Block: '{' • $@2 StatementList '}'

    $default  reduce using rule 8 ($@2)

    $@2  go to state 15


State 14

    7 FunctionDeclStmt: FUNC ID $@1 '(' ')' Block •

    $default  reduce using rule 7 (FunctionDeclStmt)


State 15

    9 Block: '{' $@2 • StatementList '}'

    LET      shift, and go to state 16
    NEWLINE  shift, and go to state 17
    IF       shift, and go to state 18
    WHILE    shift, and go to state 19
    PRINT    shift, and go to state 20
    PRINTLN  shift, and go to state 21
    ID       shift, and go to state 22
    '{'      shift, and go to state 13

    Block          go to state 23
    StatementList  go to state 24
    Statement      go to state 25
    VariableDecl   go to state 26
    Assignment     go to state 27


State 16

   23 VariableDecl: LET • MUT ID ':' Type
   24             | LET • ID ':' Type
   25             | LET • MUT ID ':' Type '=' Expr
   26             | LET • ID ':' Type '=' Expr
   27             | LET • MUT ID '=' Expr
   28             | LET • ID '=' Expr

    MUT  shift, and go to state 28
    ID   shift, and go to state 29


State 17

   21 Statement: NEWLINE •

    $default  reduce using rule 21 (Statement)


State 18

   18 Statement: IF • Expr Block
   19          | IF • Expr Block ELSE Block

    TRUE        shift, and go to state 30
    FALSE       shift, and go to state 31
    INT_LIT     shift, and go to state 32
    FLOAT_LIT   shift, and go to state 33
    STRING_LIT  shift, and go to state 34
    ID          shift, and go to state 35
    '-'         shift, and go to state 36
    '!'         shift, and go to state 37
    '('         shift, and go to state 38
    '['         shift, and go to state 39
    '"'         shift, and go to state 40

    Expr     go to state 41
    Literal  go to state 42


State 19

   20 Statement: WHILE • Expr Block

    TRUE        shift, and go to state 30
    FALSE       shift, and go to state 31
    INT_LIT     shift, and go to state 32
    FLOAT_LIT   shift, and go to state 33
    STRING_LIT  shift, and go to state 34
    ID          shift, and go to state 35
    '-'         shift, and go to state 36
    '!'         shift, and go to state 37
    '('         shift, and go to state 38
    '['         shift, and go to state 39
    '"'         shift, and go to state 40

    Expr     go to state 43
    Literal  go to state 42


State 20

   15 Statement: PRINT • Expr $@4 ';'

    TRUE        shift, and go to state 30
    FALSE       shift, and go to state 31
    INT_LIT     shift, and go to state 32
    FLOAT_LIT   shift, and go to state 33
    STRING_LIT  shift, and go to state 34
    ID          shift, and go to state 35
    '-'         shift, and go to state 36
    '!'         shift, and go to state 37
    '('         shift, and go to state 38
    '['         shift, and go to state 39
    '"'         shift, and go to state 40

    Expr     go to state 44
    Literal  go to state 42


State 21

   13 Statement: PRINTLN • Expr $@3 ';'

    TRUE        shift, and go to state 30
    FALSE       shift, and go to state 31
    INT_LIT     shift, and go to state 32
    FLOAT_LIT   shift, and go to state 33
    STRING_LIT  shift, and go to state 34
    ID          shift, and go to state 35
    '-'         shift, and go to state 36
    '!'         shift, and go to state 37
    '('         shift, and go to state 38
    '['         shift, and go to state 39
    '"'         shift, and go to state 40

    Expr     go to state 45
    Literal  go to state 42


State 22

   29 Assignment: ID • '=' Expr
   30           | ID • ADD_ASSIGN Expr
   31           | ID • SUB_ASSIGN Expr
   32           | ID • MUL_ASSIGN Expr
   33           | ID • DIV_ASSIGN Expr
   34           | ID • REM_ASSIGN Expr

    ADD_ASSIGN  shift, and go to state 46
    SUB_ASSIGN  shift, and go to state 47
    MUL_ASSIGN  shift, and go to state 48
    DIV_ASSIGN  shift, and go to state 49
    REM_ASSIGN  shift, and go to state 50
    '='         shift, and go to state 51


State 23

   22 Statement: Block •

    $default  reduce using rule 22 (Statement)


State 24

    9 Block: '{' $@2 StatementList • '}'
   10 StatementList: StatementList • Statement

    LET      shift, and go to state 16
    NEWLINE  shift, and go to state 17
    IF       shift, and go to state 18
    WHILE    shift, and go to state 19
    PRINT    shift, and go to state 20
    PRINTLN  shift, and go to state 21
    ID       shift, and go to state 22
    '{'      shift, and go to state 13
    '}'      shift, and go to state 52

    Block         go to state 23
    Statement     go to state 53
    VariableDecl  go to state 26
    Assignment    go to state 27


State 25

   11 StatementList: Statement •

    $default  reduce using rule 11 (StatementList)


State 26

   16 Statement: VariableDecl • ';'

    ';'  shift, and go to state 54


State 27

   17 Statement: Assignment • ';'

    ';'  shift, and go to state 55


State 28

   23 VariableDecl: LET MUT • ID ':' Type
   25             | LET MUT • ID ':' Type '=' Expr
   27             | LET MUT • ID '=' Expr

    ID  shift, and go to state 56


State 29

   24 VariableDecl: LET ID • ':' Type
   26             | LET ID • ':' Type '=' Expr
   28             | LET ID • '=' Expr

    ':'  shift, and go to state 57
    '='  shift, and go to state 58


State 30

   63 Literal: TRUE •

    $default  reduce using rule 63 (Literal)


State 31

   64 Literal: FALSE •

    $default  reduce using rule 64 (Literal)


State 32

   59 Literal: INT_LIT •

    $default  reduce using rule 59 (Literal)


State 33

   60 Literal: FLOAT_LIT •

    $default  reduce using rule 60 (Literal)


State 34

   61 Literal: STRING_LIT •

    $default  reduce using rule 61 (Literal)


State 35

   36 Expr: ID •
   38     | ID • $@5 '[' Expr ']'

    '['       reduce using rule 37 ($@5)
    $default  reduce using rule 36 (Expr)

    $@5  go to state 59


State 36

   39 Expr: '-' • Expr

    TRUE        shift, and go to state 30
    FALSE       shift, and go to state 31
    INT_LIT     shift, and go to state 32
    FLOAT_LIT   shift, and go to state 33
    STRING_LIT  shift, and go to state 34
    ID          shift, and go to state 35
    '-'         shift, and go to state 36
    '!'         shift, and go to state 37
    '('         shift, and go to state 38
    '['         shift, and go to state 39
    '"'         shift, and go to state 40

    Expr     go to state 60
    Literal  go to state 42


State 37

   40 Expr: '!' • Expr

    TRUE        shift, and go to state 30
    FALSE       shift, and go to state 31
    INT_LIT     shift, and go to state 32
    FLOAT_LIT   shift, and go to state 33
    STRING_LIT  shift, and go to state 34
    ID          shift, and go to state 35
    '-'         shift, and go to state 36
    '!'         shift, and go to state 37
    '('         shift, and go to state 38
    '['         shift, and go to state 39
    '"'         shift, and go to state 40

    Expr     go to state 61
    Literal  go to state 42


State 38

   57 Expr: '(' • Expr ')'

    TRUE        shift, and go to state 30
    FALSE       shift, and go to state 31
    INT_LIT     shift, and go to state 32
    FLOAT_LIT   shift, and go to state 33
    STRING_LIT  shift, and go to state 34
    ID          shift, and go to state 35
    '-'         shift, and go to state 36
    '!'         shift, and go to state 37
    '('         shift, and go to state 38
    '['         shift, and go to state 39
    '"'         shift, and go to state 40

    Expr     go to state 62
    Literal  go to state 42


State 39

   58 Expr: '[' • ArrayLiteral ']'

    TRUE        shift, and go to state 30
    FALSE       shift, and go to state 31
    INT_LIT     shift, and go to state 32
    FLOAT_LIT   shift, and go to state 33
    STRING_LIT  shift, and go to state 34
    '"'         shift, and go to state 63

    Literal       go to state 64
    ArrayLiteral  go to state 65


State 40

   56 Expr: '"' • Expr '"'
   62 Literal: '"' • '"'

    TRUE        shift, and go to state 30
    FALSE       shift, and go to state 31
    INT_LIT     shift, and go to state 32
    FLOAT_LIT   shift, and go to state 33
    STRING_LIT  shift, and go to state 34
    ID          shift, and go to state 35
    '-'         shift, and go to state 36
    '!'         shift, and go to state 37
    '('         shift, and go to state 38
    '['         shift, and go to state 39
    '"'         shift, and go to state 66

    Expr     go to state 67
    Literal  go to state 42


State 41

   18 Statement: IF Expr • Block
   19          | IF Expr • Block ELSE Block
   41 Expr: Expr • '+' Expr
   42     | Expr • '-' Expr
   43     | Expr • '*' Expr
   44     | Expr • '/' Expr
   45     | Expr • '%' Expr
   46     | Expr • '>' Expr
   47     | Expr • '<' Expr
   48     | Expr • GEQ Expr
   49     | Expr • LEQ Expr
   50     | Expr • EQL Expr
   51     | Expr • NEQ Expr
   52     | Expr • LOR Expr
   53     | Expr • LAND Expr
   54     | Expr • LSHIFT Expr
   55     | Expr • AS Type

    GEQ     shift, and go to state 68
    LEQ     shift, and go to state 69
    EQL     shift, and go to state 70
    NEQ     shift, and go to state 71
    LOR     shift, and go to state 72
    LAND    shift, and go to state 73
    AS      shift, and go to state 74
    LSHIFT  shift, and go to state 75
    '>'     shift, and go to state 76
    '<'     shift, and go to state 77
    '+'     shift, and go to state 78
    '-'     shift, and go to state 79
    '*'     shift, and go to state 80
    '/'     shift, and go to state 81
    '%'     shift, and go to state 82
    '{'     shift, and go to state 13

    Block  go to state 83


State 42

   35 Expr: Literal •

    $default  reduce using rule 35 (Expr)


State 43

   20 Statement: WHILE Expr • Block
   41 Expr: Expr • '+' Expr
   42     | Expr • '-' Expr
   43     | Expr • '*' Expr
   44     | Expr • '/' Expr
   45     | Expr • '%' Expr
   46     | Expr • '>' Expr
   47     | Expr • '<' Expr
   48     | Expr • GEQ Expr
   49     | Expr • LEQ Expr
   50     | Expr • EQL Expr
   51     | Expr • NEQ Expr
   52     | Expr • LOR Expr
   53     | Expr • LAND Expr
   54     | Expr • LSHIFT Expr
   55     | Expr • AS Type

    GEQ     shift, and go to state 68
    LEQ     shift, and go to state 69
    EQL     shift, and go to state 70
    NEQ     shift, and go to state 71
    LOR     shift, and go to state 72
    LAND    shift, and go to state 73
    AS      shift, and go to state 74
    LSHIFT  shift, and go to state 75
    '>'     shift, and go to state 76
    '<'     shift, and go to state 77
    '+'     shift, and go to state 78
    '-'     shift, and go to state 79
    '*'     shift, and go to state 80
    '/'     shift, and go to state 81
    '%'     shift, and go to state 82
    '{'     shift, and go to state 13

    Block  go to state 84


State 44

   15 Statement: PRINT Expr • $@4 ';'
   41 Expr: Expr • '+' Expr
   42     | Expr • '-' Expr
   43     | Expr • '*' Expr
   44     | Expr • '/' Expr
   45     | Expr • '%' Expr
   46     | Expr • '>' Expr
   47     | Expr • '<' Expr
   48     | Expr • GEQ Expr
   49     | Expr • LEQ Expr
   50     | Expr • EQL Expr
   51     | Expr • NEQ Expr
   52     | Expr • LOR Expr
   53     | Expr • LAND Expr
   54     | Expr • LSHIFT Expr
   55     | Expr • AS Type

    GEQ     shift, and go to state 68
    LEQ     shift, and go to state 69
    EQL     shift, and go to state 70
    NEQ     shift, and go to state 71
    LOR     shift, and go to state 72
    LAND    shift, and go to state 73
    AS      shift, and go to state 74
    LSHIFT  shift, and go to state 75
    '>'     shift, and go to state 76
    '<'     shift, and go to state 77
    '+'     shift, and go to state 78
    '-'     shift, and go to state 79
    '*'     shift, and go to state 80
    '/'     shift, and go to state 81
    '%'     shift, and go to state 82

    $default  reduce using rule 14 ($@4)

    $@4  go to state 85


State 45

   13 Statement: PRINTLN Expr • $@3 ';'
   41 Expr: Expr • '+' Expr
   42     | Expr • '-' Expr
   43     | Expr • '*' Expr
   44     | Expr • '/' Expr
   45     | Expr • '%' Expr
   46     | Expr • '>' Expr
   47     | Expr • '<' Expr
   48     | Expr • GEQ Expr
   49     | Expr • LEQ Expr
   50     | Expr • EQL Expr
   51     | Expr • NEQ Expr
   52     | Expr • LOR Expr
   53     | Expr • LAND Expr
   54     | Expr • LSHIFT Expr
   55     | Expr • AS Type

    GEQ     shift, and go to state 68
    LEQ     shift, and go to state 69
    EQL     shift, and go to state 70
    NEQ     shift, and go to state 71
    LOR     shift, and go to state 72
    LAND    shift, and go to state 73
    AS      shift, and go to state 74
    LSHIFT  shift, and go to state 75
    '>'     shift, and go to state 76
    '<'     shift, and go to state 77
    '+'     shift, and go to state 78
    '-'     shift, and go to state 79
    '*'     shift, and go to state 80
    '/'     shift, and go to state 81
    '%'     shift, and go to state 82

    $default  reduce using rule 12 ($@3)

    $@3  go to state 86


State 46

   30 Assignment: ID ADD_ASSIGN • Expr

    TRUE        shift, and go to state 30
    FALSE       shift, and go to state 31
    INT_LIT     shift, and go to state 32
    FLOAT_LIT   shift, and go to state 33
    STRING_LIT  shift, and go to state 34
    ID          shift, and go to state 35
    '-'         shift, and go to state 36
    '!'         shift, and go to state 37
    '('         shift, and go to state 38
    '['         shift, and go to state 39
    '"'         shift, and go to state 40

    Expr     go to state 87
    Literal  go to state 42


State 47

   31 Assignment: ID SUB_ASSIGN • Expr

    TRUE        shift, and go to state 30
    FALSE       shift, and go to state 31
    INT_LIT     shift, and go to state 32
    FLOAT_LIT   shift, and go to state 33
    STRING_LIT  shift, and go to state 34
    ID          shift, and go to state 35
    '-'         shift, and go to state 36
    '!'         shift, and go to state 37
    '('         shift, and go to state 38
    '['         shift, and go to state 39
    '"'         shift, and go to state 40

    Expr     go to state 88
    Literal  go to state 42


State 48

   32 Assignment: ID MUL_ASSIGN • Expr

    TRUE        shift, and go to state 30
    FALSE       shift, and go to state 31
    INT_LIT     shift, and go to state 32
    FLOAT_LIT   shift, and go to state 33
    STRING_LIT  shift, and go to state 34
    ID          shift, and go to state 35
    '-'         shift, and go to state 36
    '!'         shift, and go to state 37
    '('         shift, and go to state 38
    '['         shift, and go to state 39
    '"'         shift, and go to state 40

    Expr     go to state 89
    Literal  go to state 42

